# OOP

./: .gitignore  CMakeLists.txt
GUI/: CMakeLists.txt
GUI/inc/: CustomPlotItem.hxx
GUI/resources/qml/: Main.qml
GUI/src/: CustomPlotItem.cxx  main.cxx
Laba_1/: CMakeLists.txt
Laba_1/inc/: Empiric.hxx  Histogram.hxx  IDistribution.hxx  IGLDistribution.hxx  IObserver.hxx  IPersistent.hxx  LabTester.hxx  Normal.hxx  Uniform.hxx
Laba_1/src/: Empiric.cxx  Histogram.cxx  IGLDistribution.cxx  LabTester.cxx  Normal.cxx  Uniform.cxx  main.cxx
Laba_2/: CMakeLists.txt
Laba_2/inc/: DistributionFactory.hxx  Empiric.hxx  GeneralDistribution.hxx  Histogram.hxx  IDistribution.hxx  IGLDistribution.hxx  IObserver.hxx  IPersistent.hxx  LabTester.hxx  Normal.hxx  Uniform.hxx
Laba_2/src/: DistributionFactory.cxx  Empiric.cxx  GeneralDistribution.cxx  Histogram.cxx  IDistribution.cxx  IGLDistribution.cxx  LabTester.cxx  Normal.cxx  Uniform.cxx  main.cxx
scripts/: custom.template.bat  generate.bat  run_MSVC.bat
